fix: prevent multiple overlays from being instantiated, and increase z-index so it it more likely to show up
https://app.asana.com/0/37213698877677/1151237493508959

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     font-size: 11px;
     color: #333;
     font-family: 'Arial', Helvetica, sans-serif;
-    z-index: 9999;
+    z-index: 20000;
     cursor: pointer;
     right: 5px; 
     transition: 0.4s;
